[package]
name = "speak-to"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "speak-to"
path = "src/main.rs"

[dependencies]
voxtral-mini-realtime = { git = "https://github.com/TrevorS/voxtral-mini-realtime-rs", default-features = false, features = ["wgpu", "native-tokenizer", "hub"] }
burn = { version = "0.20", default-features = false, features = ["std", "wgpu"] }
cpal = "0.17"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
hf-hub = { version = "0.4", default-features = false, features = ["ureq"] }
anyhow = "1"
ctrlc = "3"
nix = { version = "0.29", features = ["poll", "term", "signal", "fs", "process"] }
signal-hook = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
